wordpress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 4 
  template:
    metadata:
      labels:
        name: wordpress
    spec:
      containers:
        # documentation for this image: https://hub.docker.com/_/wordpress/
        - image: wordpress:4.5
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
